# fcpplib

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  q
buikd/: CMakeCache.txt  Makefile  cmake_install.cmake
buikd/demo/: Makefile  cmake_install.cmake
buikd/src/: Makefile  cmake_install.cmake
demo/: CMakeLists.txt  main.cpp
include/fairlay/: fairlay.h  parser.h  request.h
include/fcpp/: fcpp.h  market.h  markets.h  parser.h  request.h
src/: CMakeLists.txt  market.cpp  markets.cpp  markets.h  parser.cpp  request.cpp  testmessanger.cpp  testmessanger.h
