cmake_minimum_required(VERSION 3.10.1)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")

project(fcpp CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

set(FCPP_LIBRARIES fcpp)
set(FCPP_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/ext/json/include)

add_subdirectory(src)
add_subdirectory(ext/json)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demo)
